objects/New__c.object
<CustomObject>
    <fields>
        <fullName>New_Headline__c</fullName>
        <label>New Headline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>News_Text__c</fullName>
        <label>News Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Publication_Date__c</fullName>
        <label>Publication Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <label>Publication</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Review</fullName>
                    <default>true</default>
                    <label>In Review</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Published to Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>News</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>New Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>News</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>